[gd_scene load_steps=4 format=3 uid="uid://tuslebqde7lt"]

[ext_resource type="Script" uid="uid://bnseahniu880d" path="res://scripts/ui/MissionVideo.gd" id="1_c8r05"]
[ext_resource type="VideoStream" uid="uid://c3ps46exc8xy0" path="res://assets/videos/us_crested_cap_intro.ogv" id="1_caei0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8r05"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 1)
corner_detail = 5

[node name="MissionVideo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8r05")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c8r05")

[node name="Player" type="VideoStreamPlayer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
stream = ExtResource("1_caei0")
autoplay = true
expand = true
bus = &"Music"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Subtitles" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HoldProgress" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 8)
layout_mode = 2
show_percentage = false

[node name="HoldLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hold SPACE to skip"
horizontal_alignment = 1
